some refactored code